correcion en pomxml

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>API3XD</name>
 	<description>Demo project for Spring Boot</description>
+	<properties>
 	<java.version>11</java.version>
                 <maven.compiler.source>1.8</maven.compiler.source>
                 <maven.compiler.target>1.8</maven.compiler.target>
